2008-03-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-private.h (SoupMessagePrivate): add
	an orig_http_version field.

	* libsoup/soup-message.c (soup_message_init): initialize
	orig_http_version.
	(soup_message_set_http_version): If called before the status code
	is received, set orig_http_version too.
	(soup_message_cleanup_response): Restore orig_http_version, so
	that we don't send an HTTP/1.0 request in response to an HTTP/1.0
	redirect. #521848, Tommi Komulainen.

	* libsoup/soup-message-server-io.c (get_response_headers):
	actually output "HTTP/1.0", not "HTTP/1.1", if the message's http
	version is 1.0.

	* tests/redirect-test.c (server_callback): Add a regression test;
	set http_version to 1.0 when returning a redirect, but require it
	to be 1.1 when processing the following request

2008-03-13  Xan Lopez  <xan@gnome.org>

        * libsoup/soup-address.c:
        * libsoup/soup-auth-domain-basic.c:
        * libsoup/soup-auth-domain-digest.c:
        * libsoup/soup-auth-domain.c:
        * libsoup/soup-auth.c:
        * libsoup/soup-connection.c:
        * libsoup/soup-message.c:
        * libsoup/soup-server.c:
        * libsoup/soup-session.c:
        * libsoup/soup-socket.c:

	Use G_OBJECT_WARN_INVALID_PROPERTY_ID in all get/set_property functions.

	Bug #522115
	
2008-03-13  Xan Lopez  <xan@gnome.org>

        * tests/dns.c: (main):
        * tests/get.c: (main):
        * tests/getbug.c: (main):
        * tests/simple-httpd.c: (main):
        * tests/simple-proxy.c: (main):
        * tests/ssl-test.c: (main):
        * tests/test-utils.c: (test_init):

        g_thread_init should be called before any other glib function. (#522117)

2008-03-10  Dan Winship  <danw@gnome.org>

	* configure.in: 2.4.0!

	* NEWS: update

2008-02-28  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (finalize): free priv->user_agent.
	#518798, Wouter Cloetens.
	(redirect_handler): PROPFIND is defined to be "safe and